# CamPlus

./: MANIFEST.in  README.md  RUN_find_text_custom.bat  RUN_remove_debug_files.bat  TODO.md  find_text_custom.py  package.xml  remove_debug_files.py  zip_freecad.bat  zip_freecad_folders.bat
examples/freecad-files/: Triangle.FCStd
freecad/: __init__.py
freecad/camplus/: __init__.py  gui_commands.py  init_gui.py
freecad/camplus/amendcode/: AmendCode.py  AmendCodeGui.py  __init__.py
freecad/camplus/boundary/: Boundary.py  BoundaryGui.py  BoundaryUtils.py  __init__.py
freecad/camplus/features/: Features.py
freecad/camplus/guipanels/: DressupAmendCodeEdit.ui  __init__.py
freecad/camplus/inlay/: Filters.py  FiltersUp.py  Inlay.py  InlayClosed.py  InlayClosedUp.py  InlayGui.py  Support.py  __init__.py
freecad/camplus/orig_boundary/: Boundary.py  BoundaryBody.py  BoundaryGui.py  BoundaryShape.py  BoundaryShapeGui.py
freecad/camplus/support/: Gui_Input.py  __init__.py
freecad/camplus/utilities/: AlignToFeature.py  DropCut.py  Edge.py  Flatten.py  General.py  Generators.py  GuiTools.py  JobUtils.py  MeshTools.py  ObjectTools.py  Region.py  Slice.py  StrategySlicing.py  SupportSketch.py  ToolControllers.py  ViewObjectTools.py  Wire.py  __init__.py
freecad/camplus/workingshape/: ModelFeatures.py  ModelFeaturesGui.py  PageModelFeatures.py  RotationFeatures.py  RotationFeaturesGui.py  WorkingShape.py  WorkingShapeGui.py  __init__.py
